# thunderdb

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE.md  README.md  README_BUILD.md  UPDATE.md  config.example.json  linkedin.md
benches/: index_bench.rs  indexed_select_bench.rs  insert_bench.rs  select_bench.rs  stress_bench.rs
docs/superpowers/plans/: 2026-03-26-sql-join.md  2026-03-27-page-file.md  2026-03-27-paged-table.md  2026-03-27-query-optimizer.md  2026-03-27-slotted-page.md  2026-03-27-storage-optimization.md  2026-03-27-text-matching-optimization.md  2026-03-27-toast.md  2026-04-16-benchmark-harness.md  2026-04-16-sp2-full-scan-closure.md  2026-04-23-sp3-write-path.md  2026-04-24-sp3b-write-path-optimization.md  2026-04-26-sp4a-query-features-1.md  2026-04-26-sp4b-query-features-2.md
docs/superpowers/specs/: 2026-03-26-sql-join-design.md  2026-03-27-page-file-design.md  2026-03-27-paged-table-design.md  2026-03-27-query-optimizer-design.md  2026-03-27-slotted-page-design.md  2026-03-27-storage-optimization-design.md  2026-03-27-text-matching-optimization-design.md  2026-03-27-toast-design.md  2026-04-16-benchmark-harness-design.md  2026-04-16-sp2-full-scan-closure-design.md  2026-04-23-sp3-write-path-design.md  2026-04-24-sp3b-write-path-optimization-design.md  2026-04-26-sp4a-query-features-1-design.md  2026-04-26-sp4b-query-features-2-design.md
examples/: wasm_example.html
perf/: baseline-query.json  baseline-query2.json  baseline-write.json  baseline.json
scripts/: build_linux_bin.sh  build_linux_so.sh  build_wasm.sh
src/: error.rs  lib.rs  main.rs  wasm.rs
src/config/: mod.rs  types.rs
src/index/: btree.rs  lazy.rs  like.rs  manager.rs  mod.rs  node.rs  persist.rs  stats.rs
src/parser/: ast.rs  cache.rs  executor.rs  mod.rs  parser.rs  token.rs  validator.rs
src/query/: aggregate.rs  builder.rs  direct.rs  filter.rs  mod.rs
src/repl/: commands.rs  formatter.rs  mod.rs
src/storage/: data_file.rs  mod.rs  page.rs  page_file.rs  paged_table.rs  rat.rs  row.rs  small_string.rs  table_engine.rs  toast.rs  value.rs
tests/: aggregate_distinct.rs  stress_1m.rs  table_existence.rs
tests/fixtures/: blog_benchmark.sql  join_test.sql  smoke_test.sql
tests/integration/: blog_benchmark_test.rs  error_handling_test.rs  extended_index_test.rs  indexing_test.rs  join_test.rs  schema_test.rs  thunderdb_vs_sqlite_bench.rs
tests/perf/: harness_selftest.rs  vs_sqlite_query.rs  vs_sqlite_query2.rs  vs_sqlite_read.rs  vs_sqlite_write.rs
tests/perf/common/: baseline.rs  cache.rs  fairness.rs  fixtures.rs  mod.rs  report.rs  runner.rs  scenario.rs  verdict.rs
tests/sql/: blog.sql  blog_suite.rs
work/ai/: specs.md
