[package]
name = "thunderdb"
version = "0.1.0"
edition = "2021"
authors = ["ThunderDB Contributors"]
description = "A custom database engine with zero heavy dependencies, high performance B-Tree indexing, and dual SQL/Direct API interfaces"
license = "MIT"
repository = "https://github.com/yourusername/thunderdb-rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[dependencies.rustyline]
version = "13.0"
optional = true

[features]
default = ["repl"]
repl = ["rustyline"]

[[bench]]
name = "insert_bench"
harness = false

[[bench]]
name = "select_bench"
harness = false

[[bench]]
name = "index_bench"
harness = false

[[test]]
name = "blog_suite"
path = "tests/sql/blog_suite.rs"

[[test]]
name = "table_existence"
path = "tests/table_existence.rs"
