[package]
name = "thunderdb"
version = "0.1.0"
edition = "2021"
authors = ["ThunderDB Contributors"]
description = "A custom database engine with zero heavy dependencies, high performance B-Tree indexing, and dual SQL/Direct API interfaces"
license = "MIT"
repository = "https://github.com/yourusername/thunderdb-rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2"
memmap2 = "0.9"
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
criterion = "0.5"
rusqlite = { version = "0.34", features = ["bundled"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[dependencies.rustyline]
version = "13.0"
optional = true

[features]
default = ["repl"]
repl = ["rustyline"]
wasm = ["wasm-bindgen"]

[[bench]]
name = "insert_bench"
harness = false

[[bench]]
name = "select_bench"
harness = false

[[bench]]
name = "indexed_select_bench"
harness = false

[[bench]]
name = "index_bench"
harness = false

[[test]]
name = "blog_suite"
path = "tests/sql/blog_suite.rs"

[[test]]
name = "table_existence"
path = "tests/table_existence.rs"

[[test]]
name = "indexing_test"
path = "tests/integration/indexing_test.rs"

[[test]]
name = "error_handling_test"
path = "tests/integration/error_handling_test.rs"

[[test]]
name = "extended_index_test"
path = "tests/integration/extended_index_test.rs"

[[test]]
name = "schema_test"
path = "tests/integration/schema_test.rs"

[[test]]
name = "blog_benchmark_test"
path = "tests/integration/blog_benchmark_test.rs"

[[test]]
name = "join_test"
path = "tests/integration/join_test.rs"

[[test]]
name = "stress_1m"
path = "tests/stress_1m.rs"

[[test]]
name = "thunderdb_vs_sqlite_bench"
path = "tests/integration/thunderdb_vs_sqlite_bench.rs"

[[bench]]
name = "stress_bench"
harness = false

[[test]]
name = "vs_sqlite_read"
path = "tests/perf/vs_sqlite_read.rs"

[[test]]
name = "harness_selftest"
path = "tests/perf/harness_selftest.rs"
